<resources>
    <string name="app_name" translatable="false">CoinER</string>
    <string name="btc" translatable="false">BTC</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="navigation_drawer_open" translatable="false">Drawer Open</string>
    <string name="navigation_drawer_close" translatable="false">Drawer Closed</string>

    <string name="action_settings" translatable="false">Settings</string>
    <string name="by_hammersoft" translatable="false"><a href="https://play.google.com/store/apps/dev?id=8988717614304464293">HammerSoft</a></string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5891784927336832/5609185100</string>
    <string name="str_btc" translatable="false">BTC</string>
    <string name="str_usd" translatable="false">USD</string>
    <string name="str_null_value" translatable="false">0.0</string>
    <string name="str_param_currency_symbol" translatable="false">CurrencySymbol</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="str_network_error">Por favor, verifique sua conexão</string>
    <string name="str_service_error">O serviço está fora do ar, tente novamente mais tarde</string>
    <string name="customnotificationtitle" translatable="false">Title</string>
    <string name="customnotificationtext" translatable="false">Content</string>
    <string name="notify_value">Notificar variação:</string>
    <string name="str_ok" translatable="false">Ok</string>
    <string name="str_cancel">Cancelar</string>
    <string name="str_upper">Maior que:</string>
    <string name="str_lower">Menor que:</string>
    <string name="str_reload">Atualizar</string>
    <string name="str_cifra_dolar" translatable="false">$</string>
    <string name="str_privacy">Estamos trabalhando para fazer nossos apps melhores. Ajude-nos a continuar. Suporte o desenvolvedor fazendo o download diretamente do Google Play, agradeceremos trabalhando cada vez mais para que nossos apps tenham a qualidade que nossos usuários merecem.</string>

</resources>
