<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@android:style/TextAppearance.StatusBar.EventContent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient"
    android:gravity="left">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imagenotileft"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_launcher_bg" />

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/customnotificationtitle"
                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageViewDash"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_dash_lower" />

        <TextView
            android:id="@+id/textViewValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/customnotificationtext"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>


</RelativeLayout>