<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="3">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/notify_value"
            android:textColor="@color/colorAccent" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="false"
                android:layout_centerVertical="false"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_upper"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textViewUpper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="false"
                android:layout_centerVertical="false"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarUpper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1" />


        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentStart="false"
                android:layout_centerVertical="false"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_lower"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textViewLower"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="false"
                android:layout_centerVertical="false"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBarLower"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:layout_weight="1" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:divider="@color/common_google_signin_btn_text_dark_focused"
            android:orientation="horizontal"
            android:showDividers="middle"
            android:weightSum="2">

            <TextView
                android:id="@+id/textViewOK"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_ok"
                android:textColor="@color/colorAccent" />

            <TextView
                android:id="@+id/textViewCancel"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/str_cancel"
                android:textColor="@color/colorAccent" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>