<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hammersoft.coiner.CurrencyInfoActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <RelativeLayout
            android:id="@+id/error_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageViewError"
                android:layout_margin="10dp"
                android:text="@string/str_service_error"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageViewError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                app:srcCompat="@drawable/icon_service_error" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/net_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="center"
                app:srcCompat="@drawable/img_net" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/loadingPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/circle_shape"
                android:indeterminate="true"
                android:indeterminateDrawable="@drawable/custom_progressbar" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/adView"
            android:layout_alignParentEnd="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:weightSum="5">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/relativeLayout"
                android:layout_below="@+id/layout_info_header"
                android:orientation="vertical"
                android:weightSum="2">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chartBtc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10sp" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chartUsd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_info_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:layout_weight="1"
                        ads:srcCompat="?android:attr/actionModeCloseDrawable" />

                    <ImageView
                        android:id="@+id/imageViewCoin"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:foregroundGravity="center"
                        android:src="@drawable/ic_btc" />

                    <TextView
                        android:id="@+id/txtViewSymbol"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:foregroundGravity="center"
                        android:gravity="center_vertical|center"
                        android:text="@string/str_btc"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="normal|bold" />

                    <ImageView
                        android:id="@+id/imageViewcalc"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="20dp"
                        android:layout_weight="1"
                        android:visibility="gone"
                        ads:srcCompat="@drawable/ic_calc_icon" />

                    <ImageView
                        android:id="@+id/imageViewNotify"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        ads:srcCompat="@drawable/ic_notify" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="@string/str_btc"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewInfoBTCVal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="@string/str_null_value"
                            android:textSize="24sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="@string/str_usd"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewInfoUSDVal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:layout_weight="1"
                            android:text="@string/str_null_value"
                            android:textSize="24sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/adViewGraph"
                android:background="@color/colorPrimary">

            </RelativeLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewGraph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id"/>
        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
